--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body{
   min-height: 100vh;
+  background-image:linear-gradient(to bottom,rgb(130,235,235)1%,pink 50%,rgb(130,235,235));
+}
+#Navbar{
+  background-color: rgb(13,55,119);
+  padding: 5px;
+  margin-bottom: 3rem;
+  font-family: 'Courgette',cursive;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
-
-.App-link {
-  color: #61dafb;
+.active{
+  color: red;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.notactive{
+  color:white;
+}
+.active:hover{
+  color:'white';
+  text-shadow:1px 1px 15px red;
+}
+.text{
+  margin-left: 5rem;
+  font-size: 1.3rem;
+}
+.header{
+  margin-bottom: 1.5rem;
+  display: grid;
+  grid-template-columns: 20vw 20vw;
+  grid-gap:15wh;
+  justify-content:space-between;
+}
+.butn{
+  font-size: 1.3rem;
+  padding: 0 2 rem;
+  border: 1px solid black;
+  border-radius: 25px;
+}
+td{
+  padding: 15px !important;
+}
+.algn{
+  text-align: right;
+}
+.box2{
+  width: 85w;
+  display: flex;
+  justify-content: flex-end;
+}
+.butn2{
+  font-size: 1.3rem;
+  padding: 0.5rem 4rem;
+  border: 1px solid black;
+  border-radius: 25w;
+  margin-left: 2w;
 }
